# streamlit-colour-plotting

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
dev/: profile-running-streamlit.sh  run-streamlit.sh
src/: app.py
src/streamlit_colourplotting/: _utils.py  core.py
src/streamlit_colourplotting/colorlib/: __init__.py  _bitdepth.py  _colorspace.py
src/streamlit_colourplotting/ui/: __init__.py  _colorspacepicker.py  _config.py  _imagepicker.py  _main.py  _sidebar.py
streamlit_colourplotting/: __init__.py  core.py
streamlit_colourplotting/colorlib/: _colorstr.py  _rgbacolor.py
streamlit_colourplotting/ui/: __init__.py  _colorpicker.py  _colorspacepicker.py  _config.py  _imagepicker.py  _main.py  _sidebar.py
