[tool.poetry]
name = "streamlit-colour-plotting"
version = "1.1.0"
description = "Web-app to plot colors, images, colorspaces in graphs."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"
packages = [{ include = "streamlit_colourplotting" }]

[tool.poetry.dependencies]
python = ">3.9.7,<3.11"
streamlit = "^1.25"
colour-science = { version = "^0.4", extras = ["plotting"] }
matplotlib = "*"
cocoon = { git = "https://github.com/MrLixm/cocoon.git", tag = "v0.5.0" }
opencv-python-headless = "^4.8"
psutil = "*"

[tool.poetry.dev-dependencies]
black = "*"
psrecord = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
