[project]
name = "streamlit-colour-plotting"
version = "2.0.1"
description = "Web-app to plot colors, images, colorspaces in graphs."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"
packages = [{ include = "streamlit_colourplotting" }]
requires-python = ">=3.12"
dependencies = [
    "colour-science>=0.4.7",
    "imageio>=2.37.3",
    "matplotlib>=3.10.8",
    # required for imageio to read some image formats ?
    "opencv-python-headless>=4.13.0.92",
    "psutil>=7.2.2",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "psrecord>=1.4",
]
